--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -9,7 +9,7 @@ const SOCIAL_LINKS = {
 } as const;
 ---
 
-<footer class="fixed bottom-0 right-1/2 flex -translate-y-0 translate-x-1/2 gap-4 text-2xl">
+<footer class="flex gap-4 text-2xl">
   <a
     href={SOCIAL_LINKS.facebook}
     target="_blank"
