style: setting up variables for tailwind theming

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -9,7 +9,7 @@ const SOCIAL_LINKS = {
 } as const;
 ---
 
-<footer class="flex gap-4 text-2xl">
+<footer class="flex items-center justify-center gap-4 p-2 text-2xl">
   <a
     href={SOCIAL_LINKS.facebook}
     target="_blank"
