--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "@/components/Layouts/Header.astro";
 import Footer from "@/components/Layouts/Footer.astro";
+import "@/styles/global.css";
 
 interface Props {
   title: string;
@@ -19,7 +20,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="dark">
     <div class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
       <main>
@@ -29,21 +30,10 @@ const { title } = Astro.props;
     </div>
   </body>
 </html>
+
 <style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
   html {
     font-family: system-ui, sans-serif;
-    background: #13151a;
   }
   code {
     font-family:
