--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,22 @@
 import Layout from "@/layouts/Layout.astro";
 import profileImg from "@/assets/profile.png";
 import { Image } from "astro:assets";
+import ProjectCard from "@/components/ProjectCard.astro";
+import Counter from "@/components/counter";
+
+const project = { id: 1, profileImg, projectName: "Project 1", description: "Project description" };
 ---
 
 <Layout title="HomePage.">
-  <section class="mx-auto w-fit p-6 sm:grid sm:justify-center sm:gap-x-4 xl:gap-x-8">
+  <section class="mx-auto w-fit gap-4 p-6 sm:grid sm:justify-center sm:gap-x-4 xl:gap-x-8">
     <h1 class="text-3xl sm:col-start-2 sm:self-end
-         sm:justify-self-start md:text-4xl">
+            sm:justify-self-start md:text-4xl">
       Hi, I am <strong class="block">Churchill Jay Sungcados</strong>
     </h1>
     <p
       class="my-4 inline-block bg-rose-500 px-4 py-2 text-lg font-semibold
-         text-gray-50 sm:col-start-1 sm:col-end-3
-         sm:row-start-2 sm:self-start sm:text-end md:text-2xl"
+            text-gray-50 sm:col-start-1 sm:col-end-3
+            sm:row-start-2 sm:self-start sm:text-end md:text-2xl"
     >
       A Font-End Developer
     </p>
@@ -22,5 +26,62 @@ import { Image } from "astro:assets";
       alt="profile picture for portfolio"
       class="sm:relative sm:z-10 sm:col-start-1 sm:row-start-1 sm:row-end-3 sm:w-11/12 sm:justify-self-end md:w-5/6"
     />
+    <div class="relative size-full border">
+      <div
+        class="customdiv absolute left-1/2 top-5 size-full -translate-x-1/2"
+        style="--quantity: 4"
+      >
+        <ProjectCard
+          description={project.description}
+          projectName={project.projectName}
+          profileImg={project.profileImg}
+          projectName={project.projectName}
+          cardId={project.id}
+          class="customItem absolute inset-0 size-fit bg-background"
+          style="--position: 1"
+        />
+
+        <ProjectCard
+          description={project.description}
+          projectName={project.projectName}
+          profileImg={project.profileImg}
+          projectName={project.projectName}
+          cardId={project.id}
+          class="customItem absolute inset-0 size-fit bg-background"
+          style="--position: 2"
+        />
+
+        <ProjectCard
+          description={project.description}
+          projectName={project.projectName}
+          profileImg={project.profileImg}
+          projectName={project.projectName}
+          cardId={project.id}
+          class="customItem absolute inset-0 size-fit bg-background"
+          style="--position: 3"
+        />
+
+        <ProjectCard
+          description={project.description}
+          projectName={project.projectName}
+          profileImg={project.profileImg}
+          projectName={project.projectName}
+          cardId={project.id}
+          class="customItem absolute inset-0 size-fit bg-background"
+          style="--position: 4"
+        />
+      </div>
+    </div>
   </section>
 </Layout>
+
+<style>
+  .customdiv {
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+  }
+  .customItem {
+    transform: rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg))
+      translateZ(350px) rotateX(0deg);
+  }
+</style>
