refactor: moved to its own file contant

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -1,12 +1,6 @@
 ---
 import { FaLinkedin, FaSquareFacebook, FaSquareGithub, FaSquareXTwitter } from "react-icons/fa6";
-
-const SOCIAL_LINKS = {
-  facebook: "https://facebook.com/churchilljay",
-  github: "https://github.com/Churchillexe",
-  twitter: "https://x.com/ChurchillJay3",
-  linkedin: "https://www.linkedin.com/in/churchill-jay-sungcados-90b49a29a/",
-} as const;
+import { SOCIAL_LINKS } from "@/lib/constants.ts";
 ---
 
 <footer class="flex items-center justify-center gap-4 p-2 text-2xl">
