style: added mobile design

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="dark">
-    <div class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
+    <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
       <main>
         <slot />
