--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
   <body class="dark">
     <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
-      <main>
+      <main class="p-4">
         <slot />
       </main>
       <Footer />
