refactor: removed react icons lib and added svg on links logo

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -22,7 +22,7 @@ const projectArr = [
           projectName={projectName}
           profileImg={profileImg}
           projectName={projectName}
-          id={id}
+          cardId={id}
         />
       ))
     }
