--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -1,62 +1,60 @@
 ---
-import { SOCIAL_LINKS } from "@/lib/constants.ts";
+import { FacebookIcon, GithubIcon, LinkedIn, TwitterIcon } from "@/components/svg/SocialIcons";
+
+const SOCIAL_LINKS = [
+  {
+    name: "Facebook",
+    href: "https://facebook.com/churchilljay",
+    logo: FacebookIcon,
+    color: "#1877F2",
+  },
+  {
+    name: "Github",
+    href: "https://github.com/Churchillexe",
+    logo: GithubIcon,
+    color: "#000000",
+  },
+  {
+    name: "Twitter(X)",
+    href: "https://x.com/ChurchillJay3",
+    logo: TwitterIcon,
+    color: "#181717",
+  },
+  {
+    name: "LinkedIn",
+    href: "https://www.linkedin.com/in/churchill-jay-sungcados-90b49a29a/",
+    logo: LinkedIn,
+    color: "#0A66C2",
+  },
+] as const;
 ---
 
-<footer class="flex items-center justify-center gap-4 p-2 text-2xl">
-  <a
-    href={SOCIAL_LINKS.facebook}
-    target="_blank"
-    rel="noopener noreferrer"
-    class="size-8 transition-all duration-500 hover:-translate-y-2
-                    hover:scale-125 focus:-translate-y-2
-                    focus:scale-125 focus:outline-none active:animate-bounce"
-  >
-    <svg class="fill-foreground" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-      ><title>Facebook</title><path
-        d="M9.101 23.691v-7.98H6.627v-3.667h2.474v-1.58c0-4.085 1.848-5.978 5.858-5.978.401 0 .955.042 1.468.103a8.68 8.68 0 0 1 1.141.195v3.325a8.623 8.623 0 0 0-.653-.036 26.805 26.805 0 0 0-.733-.009c-.707 0-1.259.096-1.675.309a1.686 1.686 0 0 0-.679.622c-.258.42-.374.995-.374 1.752v1.297h3.919l-.386 2.103-.287 1.564h-3.246v8.245C19.396 23.238 24 18.179 24 12.044c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.628 3.874 10.35 9.101 11.647Z"
-      ></path></svg
-    >
-  </a>
-  <a
-    href={SOCIAL_LINKS.github}
-    target="_blank"
-    rel="noopener noreferrer"
-    class="size-8 transition-all duration-500 hover:-translate-y-2
-                    hover:scale-125 focus:-translate-y-2
-                    focus:scale-125 focus:outline-none active:animate-bounce"
-  >
-    <svg class="fill-foreground" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-      ><title>GitHub</title><path
-        d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
-      ></path></svg
-    >
-  </a>
-  <a
-    href={SOCIAL_LINKS.twitter}
-    target="_blank"
-    rel="noopener noreferrer"
-    class="size-8 transition-all duration-500 hover:-translate-y-2
-                    hover:scale-125 focus:-translate-y-2
-                    focus:scale-125 focus:outline-none active:animate-bounce"
-  >
-    <svg class="fill-foreground" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-      ><title>X</title><path
-        d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"
-      ></path></svg
-    >
-  </a>
-  <a
-    href={SOCIAL_LINKS.linkedin}
-    target="_blank"
-    rel="noopener noreferrer"
-    class="size-8 transition-all duration-500 hover:-translate-y-2
-                    hover:scale-125 focus:-translate-y-2
-                    focus:scale-125 focus:outline-none active:animate-bounce"
-  >
-    <svg class="fill-foreground" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-      ><title>LinkedIn</title><path
-        d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
-      ></path></svg
-    >
-  </a>
+<footer class="flex items-center justify-center gap-6 p-2 text-2xl">
+  {
+    SOCIAL_LINKS.map((social) => (
+      <a
+        href={social.href}
+        target="_blank"
+        rel="noopener noreferrer"
+        data-color={social.color}
+        data-name={social.name}
+        style={`--social-color: ${social.color}`}
+        class:list={[
+          "relative size-8 transition-all duration-500 hover:-translate-y-2 hover:scale-125 focus:-translate-y-2 focus:scale-125 focus:outline-none active:animate-bounce",
+
+          "before:content-[attr(data-name)] text-neutral-50 before:absolute before:rounded before:top-0 before:text-lg before:left-1/2 before:-translate-x-1/2 before:p-1 before:bg-[var(--social-color)] before:shadow-elevate-light before:dark:shadow-elevate-dark ",
+          //BEFORE content Transition Animation Related:
+          "before:opacity-0 before:rotate-12 before:scale-50",
+          "before:hover:-top-10 before:hover:opacity-100 before:hover:rotate-0 before:transition-[opacity_top_transform] before:[transition-timing-function:cubic-bezier(.27,-0.43,.71,1.51)] before:hover:scale-100 before:duration-300",
+
+          "after:content-[''] after:border-l-8 after:border-r-8 after:border-t-[10px] after:border-l-transparent after:border-r-transparent after:border-t-[var(--social-color)] after:absolute after:left-1/2 after:-translate-x-1/2",
+          // AFTER content Transition Animation Related:
+          "after:scale-50 after:rotate-12 after:top-6 after:opacity-0",
+          "after:hover:-top-1.5 after:hover:opacity-100 after:hover:rotate-0 after:transition-[opacity_top_transform] after:[transition-timing-function:cubic-bezier(.27,-0.43,.71,1.51)] after:hover:scale-100 after:duration-300",
+        ]}
+      >
+        <social.logo className="fill-foreground hover:fill-[var(--social-color)] dark:hover:fill-foreground " />
+      </a>
+    ))
+  }
 </footer>
