--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -14,7 +14,7 @@ const projectArr = [
 ---
 
 <Layout title="Projects">
-  <section class="grid grid-cols-3 gap-4 p-4">
+  <section class="grid grid-cols-[repeat(auto-fit,minmax(400px,1fr))] gap-4 p-4">
     {
       projectArr.map(({ id, profileImg, projectName, description }) => (
         <ProjectCard
