setting up github action

--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -4,5 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Dashboard ">
-  <Form />
+  <section class="flex size-full min-h-dvh flex-col items-center justify-center gap-4">
+    <Form />
+  </section>
 </Layout>
