chore: styling and setting up project form for dashboard

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -34,7 +34,7 @@ const pageLinks = [
       pageLinks.map((link) => (
         <li
           class:list={[
-            "[flex-1] min-w-fit w-full px-2 mt-1 pt-1 pb-2 md:text-xl  transition-transform ",
+            "flex-1 max-w-fit w-full px-2 mt-1 pt-1 pb-2 md:text-xl  transition-transform ",
             {
               "relative rounded-t-lg bg-background dark:shadow-elevate-dark-inset scale-95 shadow-elevate-light-inset":
                 pathname === `${link.href}`,
