--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -1,10 +1,10 @@
 ---
-import Form from "@/components/react-components/Form";
+import ProjectForm from "@/components/react-components/ProjectForm";
 import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Dashboard ">
   <section class="flex size-full min-h-dvh flex-col items-center justify-center gap-4">
-    <Form />
+    <ProjectForm />
   </section>
 </Layout>
