chore: created fetcher for create project post api
setting up submit function to post form to api

--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Dashboard ">
-  <section class="flex size-full min-h-dvh flex-col items-center justify-center gap-4">
-    <ProjectForm />
+  <section class="flex size-full flex-col items-center justify-center gap-4">
+    <ProjectForm client:load />
   </section>
 </Layout>
