--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import profileImg from "@/assets/profile.png";
 import { Image } from "astro:assets";
 import ProjectCard from "@/components/ProjectCard.astro";
 import { CircleChevronRight, CircleChevronLeft } from "lucide-react";
+import Counter from "@/components/counter";
 
 const project = [
   { id: 1, profileImg, projectName: "Project 1", description: "Project description" },
