chore: update links in footer
remove unused component card component

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -10,7 +10,7 @@ const SOCIAL_LINKS = [
   },
   {
     name: "Github",
-    href: "https://github.com/Churchillexe",
+    href: "https://github.com/churchilldotexe",
     logo: GithubIcon,
     color: "#000000",
   },
