chore: astro config

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -28,7 +28,7 @@ const pageLinks = [
 
 <nav class="relative flex w-full items-center justify-between p-2">
   <div class="hidden text-muted hover:underline md:block">
-    <a href="dashboard">&larr; dashboard </a>
+    <a href="/dashboard">&larr; dashboard </a>
   </div>
   <ul class="flex w-fit rounded-md px-4 shadow-elevate-light dark:shadow-elevate-dark">
     {
