style: header for prod

--- a/src/pages/projects/components.astro
+++ b/src/pages/projects/components.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Components">
   <main>
     <svg
       class="astro-a"
