--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -1,6 +1,8 @@
 ---
 export const prerender = false;
-const pathname = Astro.url.pathname;
+const pathname = Astro.url.pathname.endsWith("/")
+  ? Astro.url.pathname.slice(0, -1)
+  : Astro.url.pathname;
 
 const pageLinks = [
   {
