style: mobile media queries

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -40,7 +40,7 @@ const SOCIAL_LINKS = [
         data-name={social.name}
         style={`--social-color: ${social.color}`}
         class:list={[
-          "relative size-8 transition-all duration-500 hover:-translate-y-2 hover:scale-125 focus:-translate-y-2 focus:scale-125 focus:outline-none active:animate-bounce",
+          "relative size-6 md:size-8 transition-all duration-500 hover:-translate-y-2 hover:scale-125 focus:-translate-y-2 focus:scale-125 focus:outline-none active:animate-bounce",
 
           "before:content-[attr(data-name)] text-neutral-50 before:absolute before:rounded before:top-0 before:text-lg before:left-1/2 before:-translate-x-1/2 before:p-1 before:bg-[var(--social-color)] before:shadow-elevate-light before:dark:shadow-elevate-dark ",
           //BEFORE content Transition Animation Related:
