--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -26,7 +26,7 @@ const pageLinks = [
 ];
 ---
 
-<nav class="relative flex w-full items-center justify-between p-2">
+<nav class="relative flex w-full items-center justify-center p-2 md:justify-between">
   <div class="hidden text-muted hover:underline md:block">
     <a href="/dashboard">&larr; dashboard </a>
   </div>
