--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,9 @@ const project = [
         Hi, I am <strong class="block">Churchill Jay Sungcados</strong>
       </h1>
       <p
-        class="my-4 inline-block bg-rose-500 py-2 text-lg font-semibold
-            text-gray-50 sm:col-start-1 sm:col-end-3
-            sm:row-start-2 sm:self-start sm:text-end md:text-2xl"
+        class="my-4 inline-block bg-rose-500 p-2 text-lg font-semibold text-gray-50
+            sm:col-start-1 sm:col-end-3 sm:row-start-2
+            sm:self-start sm:text-end md:py-2 md:text-2xl"
       >
         A Font-End Developer
       </p>
