fix: build errors using node crypto

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -45,7 +45,7 @@ const pageLinks = [
             },
           ]}
         >
-          <a href={link.href} class="inline-block w-full">
+          <a href={link.href} class="inline-block w-full" data-astro-prefetch>
             {link.name}
           </a>
         </li>
