--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,6 +2,7 @@
 import ProjectCard from "@/components/ProjectCard.astro";
 import Layout from "../../layouts/Layout.astro";
 import profileImg from "@/assets/profile.png";
+import Dialog from "@/components/react-components/Dialog";
 
 const projectArr = [
   { id: 1, profileImg, projectName: "Project 1", description: "Project description" },
@@ -40,14 +41,15 @@ const projectArr = [
             "rounded-md after:rounded-md relative bg-fixed after:hover:bg-foreground/50 after:shadow-elevate-light after:dark:shadow-elevate-dark bg-radial hover:backdrop-grayscale",
           ]}
         >
-          <ProjectCard
-            description={description}
-            projectName={projectName}
-            profileImg={profileImg}
-            projectName={projectName}
-            cardId={id}
-            class:list="bg-radial-front rounded-md bg-background bg-fixed shadow-none dark:shadow-none"
-          />
+          <Dialog className="backdrop:bg-background/50" client:load>
+            <ProjectCard
+              description={description}
+              projectName={projectName}
+              profileImg={profileImg}
+              cardId={id}
+              class:list="bg-radial-front rounded-md bg-background bg-fixed shadow-none dark:shadow-none"
+            ></ProjectCard>
+          </Dialog>
         </div>
       ))
     }
